src/components/ui-shell/_shell-switcher.scss
@import '../../globals/scss/functions';
@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/vars';
@import '../../globals/scss/typography';
@import 'theme';
@import 'functions';

@mixin shell-switcher {
  //--------------------------------------------------------------------------
  // Platform Global Panel
  //--------------------------------------------------------------------------
  .#{$prefix}--panel--overlay {
    position: fixed;
    top: get-fixed-size(6);
    right: 0;
    bottom: 0;
    width: get-fixed-size(40);
    will-change: transform;
    transform: translate3d(100%, 0, 0);
    padding: 1rem 0;
    overflow-y: auto;
    z-index: 1000;
    background-color: $shell-header-bg-02;
    height: 100%;
    overflow-x: hidden;
  }

  .#{$prefix}--panel--expanded {
    box-shadow: 0 8px 16px 0 rgba($shell-ui-03, 0.25);
    transform: translate3d(0, 0, 0);
    transition: transform 0.11s cubic-bezier(0.2, 0, 0.38, 0.9);
  }

  //--------------------------------------------------------------------------
  // Platform Switcher - Search
  //--------------------------------------------------------------------------
  .#{$prefix}--switcher__search-container {
    padding: 0 get-fixed-size(2);
    margin-bottom: get-fixed-size(3);
  }

  .#{$prefix}--search--shell input {
    background-color: $shell-header-bg-05;
  }

  //--------------------------------------------------------------------------
  // Platform Switcher - Buttons
  //--------------------------------------------------------------------------
  .#{$prefix}--switcher__subheader,
  .#{$prefix}--switcher__all-btn {
    @include typescale('omega');
    padding: get-fixed-size(1);
    color: $shell-header-text-03;
  }

  .#{$prefix}--switcher__subheader {
    padding-left: get-fixed-size(7);
  }

  .#{$prefix}--switcher__all-btn {
    padding-left: get-fixed-size(7);
  }

  .#{$prefix}--switcher__all-btn,
  .#{$prefix}--switcher__back-btn {
    display: inline-block;
    background: transparent;
    width: 100%;
    border: none;
    color: $shell-header-link;
    cursor: pointer;
    text-align: left;
  }

  .#{$prefix}--switcher__all-btn:hover,
  .#{$prefix}--switcher__back-btn:hover {
    text-decoration: underline;
  }

  .#{$prefix}--switcher__all-btn:focus,
  .#{$prefix}--switcher__back-btn:focus {
    outline: none;
    box-shadow: inset 0 0 0 3px $shell-header-link;
  }

  .#{$prefix}--switcher__back-btn {
    display: flex;
    align-items: center;
    @include typescale('omega');
    padding: get-fixed-size(1) get-fixed-size(2);
  }

  .#{$prefix}--switcher__back-arrow {
    fill: $shell-header-link;
    margin-right: get-fixed-size(2);
  }

  //--------------------------------------------------------------------------
  // Platform Switcher - Product List
  //--------------------------------------------------------------------------
  .#{$prefix}--app-list__item {
    cursor: pointer;
  }

  .#{$prefix}--app-list__item:hover {
    background: $shell-header-bg-03;
  }

  .#{$prefix}--app-link {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: get-fixed-size(1) get-fixed-size(2);
    text-decoration: none;
  }

  .#{$prefix}--app-link:focus {
    outline: none;
    box-shadow: inset 0 0 0 3px $shell-header-link;
  }

  .#{$prefix}--app-link__img {
    width: get-fixed-size(2.5);
    height: get-fixed-size(2.5);
    margin-right: get-fixed-size(2);
    //placeholder border for product icon
    border: 1px solid $shell-header-bg-01;
  }

  .#{$prefix}--app-link__name {
    @include typescale('zeta');
    font-weight: 400;
    color: $shell-header-text-02;
  }

  .#{$prefix}--overflow-menu {
    position: absolute;
    right: 0;
    width: get-fixed-size(4);
    height: get-fixed-size(4);
  }

  .#{$prefix}--overflow-menu > svg {
    fill: $shell-header-text-02;
  }

  .#{$prefix}--overflow-menu:hover {
    background: $shell-header-bg-04;
  }

  .#{$prefix}--overflow-menu:focus {
    outline: none;
    box-shadow: inset 0 0 0 3px $shell-header-link;
  }

  .#{$prefix}--overflow-menu-options__option:hover {
    background: $shell-header-bg-03;
  }
}

@include exports('shell-switcher') {
  @if feature-flag-enabled('ui-shell') {
    @include shell-switcher;
  }
}

